:meat_on_bone: Working through layouts * better scss * fixing urls / cropping etc from the cdn

--- a/themes/blank/assets/sass/partials/_articles.scss
+++ b/themes/blank/assets/sass/partials/_articles.scss
@@ -4,7 +4,7 @@
 ///
 
 time {
-  @include media('>=phone') {
+  @include media(">=phone") {
     // transform: rotate(-90deg);
     // transform-origin: top right;
     font-size: 1.3rem;
@@ -20,13 +20,11 @@ time {
 }
 
 .grid-wrapper {
-
   &__listParent {
-
     &--site-article {
-      @include basic-article-wrapper('>=phone', 95vw, 5vw);
-      @include basic-article-wrapper('>=tablet', 100vw, 0, 6.5vw);
-      @include basic-article-wrapper('>=desktop', 100vw, 0, 0);
+      @include basic-article-wrapper(">=phone", 95vw, 5vw);
+      @include basic-article-wrapper(">=tablet", 100vw, 0, 6.5vw);
+      @include basic-article-wrapper(">=desktop", 100vw, 0, 0);
     }
   }
 }
@@ -36,9 +34,7 @@ time {
 //
 .site-single,
 .portfolio {
-  
   &__content {
-   
     &--shortcode-canvas {
       border-left: 0.8rem solid $site-punk-pink;
     }
