--- a/themes/blank/assets/sass/partials/_footer.scss
+++ b/themes/blank/assets/sass/partials/_footer.scss
@@ -4,6 +4,7 @@
 //
 
 .site-footer {
+  background: darken($site-background-color, 0.9);
   max-height: 15vh;
   min-height: 7.5vh;
   padding-top: 1ex;
