--- a/themes/blank/assets/sass/partials/_portfolio_item.scss
+++ b/themes/blank/assets/sass/partials/_portfolio_item.scss
@@ -4,30 +4,30 @@
 
 .grid-wrapper {
   &__portfolioParent {
-    @include media('>=phone') {
+    @include media(">=phone") {
       display: block;
     }
 
-    @include media('>=tablet') {
+    @include media(">=tablet") {
       display: flex;
     }
 
     &--portfolio-item {
-      @include basic-article-wrapper('>=phone', 95vw, 5vw);
-      @include basic-article-wrapper('>=tablet', 100vw, 0, 1.5vw);
-      @include basic-article-wrapper('>=desktop', 100vw, 0, 0);
-      @include media('>=tablet') {
+      @include basic-article-wrapper(">=phone", 95vw, 5vw);
+      @include basic-article-wrapper(">=tablet", 100vw, 0, 1.5vw);
+      @include basic-article-wrapper(">=desktop", 100vw, 0, 0);
+      @include media(">=tablet") {
         flex: 1 0 75%;
       }
 
       .portfolio {
         &__content {
           .portfolio-image-wrapper {
-            @include media('<=tablet') {
+            @include media("<=tablet") {
               display: block;
             }
 
-            @include media('>=tablet') {
+            @include media(">=tablet") {
               display: flex;
             }
 
@@ -47,7 +47,7 @@
     }
 
     &--involvement {
-      @include media('>=tablet') {
+      @include media(">=tablet") {
         flex: 1 0 25%;
         padding: 10vmax 0 0 2vw;
       }
@@ -77,11 +77,11 @@
   }
 
   &__portfolioParent {
-    @include media('>=phone') {
+    @include media(">=phone") {
       // display: block;
     }
 
-    @include media('>=tablet') {
+    @include media(">=tablet") {
       // display: flex;
     }
 
@@ -98,9 +98,9 @@
       }
 
       .hero-grid {
-         // should only be used at the top of each portfilio case study.
+        // should only be used at the top of each portfolio case study.
         grid-template-columns: 2.5vw 1fr 2.5vw 1fr 2.5vw;
-        grid-template-rows: minmax(800px, 25vh) repeat(2, minmax(8vh, 16vh)) ;
+        grid-template-rows: minmax(800px, 25vh) repeat(2, minmax(150px, auto));
 
         .image-block {
           &__100-words {
@@ -111,8 +111,7 @@
         }
 
         .copy-block {
-          &__100-words {  
-           
+          &__100-words {
             @include responsive-font(1.5vw, 1.6em, 22px, 32px);
             background-color: transparentize($site-dark-blue, 0.1);
             grid-column: 2 / 4;
@@ -123,15 +122,18 @@
         }
       }
 
+      //
+      // Each section wrapper call gets this class
+      //
       .details-grid {
-      margin-top: 2ex;
-       gap: 1ex;
+        margin-top: 2ex;
+        gap: 1ex;
         grid-template-columns: 2.5vw 1fr 2.5vw 1fr 2.5vw;
         // grid-template-rows: minmax(100px, 12vh) repeat(4, 1fr);
         grid-template-rows: minmax(130px, auto) auto;
 
         .image-block {
-          &__50-words{
+          &__50-words {
             &.primary-image {
               grid-column: 2 / 5;
               grid-row: 1 / 3;
@@ -143,10 +145,10 @@
           }
 
           &__20-words {
-             & > figcaption {
-                font-style: italic;
-                padding: 2ex;
-              }
+            & > figcaption {
+              font-style: italic;
+              padding: 2ex;
+            }
             &.left {
               grid-column: 2 / 3;
               grid-row: 2 / 4;
@@ -159,7 +161,7 @@
         }
 
         .copy-block {
-          &__50-words{
+          &__50-words {
             grid-column: 4 / 5;
             grid-row: 3 / 5;
           }
